@@ -1,3 +1,7 @@
+2013-11-20  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Resolves #51754: PHP Warning in ClassCacheManager
+
 2013-08-12  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Follow-up to #50804: Entities not sorted according to locale collation
